# cdoc

./: CONTRIBUTING.md  Cargo.toml  README.md  README_zh.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  doctor.rs  error.rs  lib.rs  main.rs  output.rs  stats.rs
src/agents/: list.rs  model.rs
src/fs/: frontmatter.rs  jsonl.rs  mod.rs
src/health/: mod.rs  model.rs  session.rs  watch.rs
src/health/signals/: cache_ratio.rs  canary.rs  compaction.rs  context_usage.rs  corrections.rs  error_rate.rs  mod.rs  repeated.rs
src/hooks/: list.rs  model.rs  validate.rs
src/memory/: add.rs  init.rs  inject.rs  list.rs  mod.rs  model.rs
src/rules/: list.rs  mod.rs  model.rs  validate.rs
src/skills/: list.rs  mod.rs  model.rs
tests/: config_test.rs  signals_test.rs
