[package]
name = "cdoc"
version = "0.1.0"
edition = "2021"
description = "CDoc — CC Doctor (Claude Code Doctor): diagnose and manage Claude Code configuration and session health"
license = "MIT"
repository = "https://github.com/user/cdoc"

[[bin]]
name = "cdoc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
dialoguer = "0.11"
ignore = "0.4"
similar = "2"
dirs = "5"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
