[package]
name = "cc-doctor"
version = "0.1.0"
edition = "2021"
description = "CC Doctor — Claude Code diagnostics: config audit, session health monitoring, forgetting detection"
license = "MIT"
repository = "https://github.com/Moguifeng-9119/cdoc"
documentation = "https://github.com/Moguifeng-9119/cdoc"
keywords = ["claude-code", "cli", "diagnostics", "monitoring", "health"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cdoc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
dialoguer = "0.11"
ignore = "0.4"
similar = "2"
dirs = "5"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
